--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ const frame = new Frame(scaling, width, height, color, outerColor, assets, path)
 
 
 
-		 	const hitBtn = new Circle(40,"#b4c1d8").pos(40,120,RIGHT,BOTTOM);
+		 	const hitBtn = new Circle(40,"#b4c1d8").pos(40,120,RIGHT,BOTTOM).drag();
 
 		 confirm.on("click", function() {
 
@@ -331,7 +331,7 @@ const frame = new Frame(scaling, width, height, color, outerColor, assets, path)
 
 				frame.on("keydown", e => {
 				// zog(e.keyCode);
-				if (e.keyCode == 32) { // spacebar
+				if (e.keyCode == 88) { // X KEY
 
 					  attack()
 				}
