--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ const frame = new Frame(scaling, width, height, color, outerColor, assets, path)
 
 
 
-		 	const hitBtn = new Circle(40,"#b4c1d8").pos(40,120,RIGHT,BOTTOM).drag();
+		 	const hitBtn = new Circle(40,"#b4c1d8").pos(40,120,RIGHT,BOTTOM);
 
 		 confirm.on("click", function() {
 
